lex&yacc/y.output
Grammar

    0 $accept: grammatica $end

    1 grammatica: regole

    2 regole: regola
    3       | regola regole

    4 regola: OP_LOOKAHEAD PARAPERTA_T NUM_LOOKAHEAD PARCHIUSA_T NON_TERM PUO_ESSERE corpo PV
    5       | NON_TERM PUO_ESSERE corpo PV

    6 corpo: elementi
    7      | elementi PIPE corpo

    8 elementi: elemento
    9         | elemento elementi

   10 elemento: TERM
   11         | NON_TERM
   12         | EPS
   13         | PARAPERTA_Q elementi PARCHIUSA_Q


Terminals, with rules where they appear

$end (0) 0
error (256)
PARAPERTA_T (258) 4
PARCHIUSA_T (259) 4
PARAPERTA_Q (260) 13
PARCHIUSA_Q (261) 13
PV (262) 4 5
EPS (263) 12
PIPE (264) 7
PUO_ESSERE (265) 4 5
NUM_LOOKAHEAD (266) 4
OP_LOOKAHEAD (267) 4
NON_TERM (268) 4 5 11
TERM (269) 10


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
grammatica (16)
    on left: 1, on right: 0
regole (17)
    on left: 2 3, on right: 1 3
regola (18)
    on left: 4 5, on right: 2 3
corpo (19)
    on left: 6 7, on right: 4 5 7
elementi (20)
    on left: 8 9, on right: 6 7 9 13
elemento (21)
    on left: 10 11 12 13, on right: 8 9


State 0

    0 $accept: . grammatica $end

    OP_LOOKAHEAD  shift, and go to state 1
    NON_TERM      shift, and go to state 2

    grammatica  go to state 3
    regole      go to state 4
    regola      go to state 5


State 1

    4 regola: OP_LOOKAHEAD . PARAPERTA_T NUM_LOOKAHEAD PARCHIUSA_T NON_TERM PUO_ESSERE corpo PV

    PARAPERTA_T  shift, and go to state 6


State 2

    5 regola: NON_TERM . PUO_ESSERE corpo PV

    PUO_ESSERE  shift, and go to state 7


State 3

    0 $accept: grammatica . $end

    $end  shift, and go to state 8


State 4

    1 grammatica: regole .

    $default  reduce using rule 1 (grammatica)


State 5

    2 regole: regola .
    3       | regola . regole

    OP_LOOKAHEAD  shift, and go to state 1
    NON_TERM      shift, and go to state 2

    $default  reduce using rule 2 (regole)

    regole  go to state 9
    regola  go to state 5


State 6

    4 regola: OP_LOOKAHEAD PARAPERTA_T . NUM_LOOKAHEAD PARCHIUSA_T NON_TERM PUO_ESSERE corpo PV

    NUM_LOOKAHEAD  shift, and go to state 10


State 7

    5 regola: NON_TERM PUO_ESSERE . corpo PV

    PARAPERTA_Q  shift, and go to state 11
    EPS          shift, and go to state 12
    NON_TERM     shift, and go to state 13
    TERM         shift, and go to state 14

    corpo     go to state 15
    elementi  go to state 16
    elemento  go to state 17


State 8

    0 $accept: grammatica $end .

    $default  accept


State 9

    3 regole: regola regole .

    $default  reduce using rule 3 (regole)


State 10

    4 regola: OP_LOOKAHEAD PARAPERTA_T NUM_LOOKAHEAD . PARCHIUSA_T NON_TERM PUO_ESSERE corpo PV

    PARCHIUSA_T  shift, and go to state 18


State 11

   13 elemento: PARAPERTA_Q . elementi PARCHIUSA_Q

    PARAPERTA_Q  shift, and go to state 11
    EPS          shift, and go to state 12
    NON_TERM     shift, and go to state 13
    TERM         shift, and go to state 14

    elementi  go to state 19
    elemento  go to state 17


State 12

   12 elemento: EPS .

    $default  reduce using rule 12 (elemento)


State 13

   11 elemento: NON_TERM .

    $default  reduce using rule 11 (elemento)


State 14

   10 elemento: TERM .

    $default  reduce using rule 10 (elemento)


State 15

    5 regola: NON_TERM PUO_ESSERE corpo . PV

    PV  shift, and go to state 20


State 16

    6 corpo: elementi .
    7      | elementi . PIPE corpo

    PIPE  shift, and go to state 21

    $default  reduce using rule 6 (corpo)


State 17

    8 elementi: elemento .
    9         | elemento . elementi

    PARAPERTA_Q  shift, and go to state 11
    EPS          shift, and go to state 12
    NON_TERM     shift, and go to state 13
    TERM         shift, and go to state 14

    $default  reduce using rule 8 (elementi)

    elementi  go to state 22
    elemento  go to state 17


State 18

    4 regola: OP_LOOKAHEAD PARAPERTA_T NUM_LOOKAHEAD PARCHIUSA_T . NON_TERM PUO_ESSERE corpo PV

    NON_TERM  shift, and go to state 23


State 19

   13 elemento: PARAPERTA_Q elementi . PARCHIUSA_Q

    PARCHIUSA_Q  shift, and go to state 24


State 20

    5 regola: NON_TERM PUO_ESSERE corpo PV .

    $default  reduce using rule 5 (regola)


State 21

    7 corpo: elementi PIPE . corpo

    PARAPERTA_Q  shift, and go to state 11
    EPS          shift, and go to state 12
    NON_TERM     shift, and go to state 13
    TERM         shift, and go to state 14

    corpo     go to state 25
    elementi  go to state 16
    elemento  go to state 17


State 22

    9 elementi: elemento elementi .

    $default  reduce using rule 9 (elementi)


State 23

    4 regola: OP_LOOKAHEAD PARAPERTA_T NUM_LOOKAHEAD PARCHIUSA_T NON_TERM . PUO_ESSERE corpo PV

    PUO_ESSERE  shift, and go to state 26


State 24

   13 elemento: PARAPERTA_Q elementi PARCHIUSA_Q .

    $default  reduce using rule 13 (elemento)


State 25

    7 corpo: elementi PIPE corpo .

    $default  reduce using rule 7 (corpo)


State 26

    4 regola: OP_LOOKAHEAD PARAPERTA_T NUM_LOOKAHEAD PARCHIUSA_T NON_TERM PUO_ESSERE . corpo PV

    PARAPERTA_Q  shift, and go to state 11
    EPS          shift, and go to state 12
    NON_TERM     shift, and go to state 13
    TERM         shift, and go to state 14

    corpo     go to state 27
    elementi  go to state 16
    elemento  go to state 17


State 27

    4 regola: OP_LOOKAHEAD PARAPERTA_T NUM_LOOKAHEAD PARCHIUSA_T NON_TERM PUO_ESSERE corpo . PV

    PV  shift, and go to state 28


State 28

    4 regola: OP_LOOKAHEAD PARAPERTA_T NUM_LOOKAHEAD PARCHIUSA_T NON_TERM PUO_ESSERE corpo PV .

    $default  reduce using rule 4 (regola)
